# myDiscord

./: .gitignore  CMakeLists.txt  Local PG.session.sql  README.md  client.c  create_client.sql  server.c  xor_cipher.c  xor_cipher.h
client/include/: chat.h
client/src/: login  login.h  main  signup.c  signup.h  threading_logic.c
data/src/: create_database.c
docs/: INSTALL.md
include/: connect_database.h  controller.h  create_database.h  database_setting.h  dictionaries.h  login.h  process_data.h  signup.h
server/include/: connect_database.h  create_database.h  database_setting.h  database_setup.h  server_linux.h  server_windows.h  signup_database.h
server/src/: connect_database.c  create_database.c  main.c  server_linux.c  server_windows.c  signup_database.c
src/: chat  chat.c  chat.h  client  client.c  connect_database.c  controller.c  controller.h  dictionaries.c  dictionaries.h  gui.c  login  login.c  login.h  main  main.c  myDiscord.css  process_data.c  server  server.c  signup  signup.c  signup.h  signup_database.c
